src/index.css
:root {
  --primary: #202020;
  --secondary: #c5afff;
  --nav: #21212199;
  --background-blur: linear-gradient(#c5afff, #65558f);
  --button-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
}

* {
  box-sizing: border-box;
  padding: 0;
  scroll-behavior: smooth;
}

html {
  width: 100vw;
  height: 100vh;
  background: var(--primary);
}

body {
  margin: 0;
  letter-spacing: 2.5px;
  line-height: 1.3;
  overflow-x: hidden;
}
a {
  color: #fff;
  text-decoration: none;
}

